# rag-chatbot

./: main.py
ai-powered-new-article-chatbot-main/ai-powered-new-article-chatbot-main/: .gitignore  (+1 more)
ai-powered-new-article-chatbot-main/ai-powered-new-article-chatbot-main/weather-chatbot/: .env.example  alembic.ini  pyproject.toml
ai-powered-new-article-chatbot-main/ai-powered-new-article-chatbot-main/weather-chatbot/alembic/: env.py
ai-powered-new-article-chatbot-main/ai-powered-new-article-chatbot-main/weather-chatbot/alembic/versions/: 0b29004ae30a_add_continent_name_column_in_weather_.py  3586aec30008_create_user_and_chathistory_tables.py  878b50c9ad65_update_email_column_wiht_unique_.py  a929c5493ec7_add_weather_metadata_table.py
ai-powered-new-article-chatbot-main/ai-powered-new-article-chatbot-main/weather-chatbot/src/weather_chatbot/: main.py
ai-powered-new-article-chatbot-main/ai-powered-new-article-chatbot-main/weather-chatbot/src/weather_chatbot/core/: config.py
ai-powered-new-article-chatbot-main/ai-powered-new-article-chatbot-main/weather-chatbot/src/weather_chatbot/database/: database.py
ai-powered-new-article-chatbot-main/ai-powered-new-article-chatbot-main/weather-chatbot/src/weather_chatbot/models/: base.py  model.py
ai-powered-new-article-chatbot-main/ai-powered-new-article-chatbot-main/weather-chatbot/src/weather_chatbot/routers/: api_router.py  auth.py  chatbot.py  llm.py
ai-powered-new-article-chatbot-main/ai-powered-new-article-chatbot-main/weather-chatbot/src/weather_chatbot/schemas/: chatbot.py  user.py
ai-powered-new-article-chatbot-main/ai-powered-new-article-chatbot-main/weather-chatbot/src/weather_chatbot/services/: auth.py  chatbot.py  user.py
ai-powered-new-article-chatbot-main/ai-powered-new-article-chatbot-main/weather-chatbot/src/weather_chatbot/utils/llm_utils/: llm_model.py
database/: database.py
smart-rag/: .env  .env.example  pyproject.toml
(+4 files in other folders)
